feat(listagem): :sparkles: Adicionando listagem das vagas
Não utilizando a API até o momento

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,46 +58,7 @@
                     </div>
                 </div>
             </div>
-            <ul class="vagas">
-                <li>
-                    <p>A1</p>
-                    <div>
-                        <p><i class="fa-solid fa-clock"></i> 30:00</p>
-                        <p>
-                            <i class="fa-solid fa-circle-xmark ocupado"></i>
-                            Ocupado
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <p>A2</p>
-                    <div>
-                        <p>
-                            <i class="fa-solid fa-circle-check livre"></i>
-                            Liberado
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <p>B1</p>
-                    <div>
-                        <p>
-                            <i class="fa-solid fa-circle-check livre"></i>
-                            Liberado
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <p>B2</p>
-                    <div>
-                        <p><i class="fa-solid fa-clock"></i> 30:00</p>
-                        <p>
-                            <i class="fa-solid fa-circle-xmark ocupado"></i>
-                            Ocupado
-                        </p>
-                    </div>
-                </li>
-            </ul>
+            <ul class="vagas"></ul>
         </main>
 
         <script src="./assets/js/app.js"></script>
